Finalize polish & refactor GameUtils. Remove un-used / un-needed functions.